# CPU

./: .gitmodules  CMakeLists.txt  alu.v  alucontroller.v  consts.v  controller.v  cpu.v  datapath.v  dmem.v  imem.v  main.cc  regfile.v  top.v
1cycle/: CMakeLists.txt  alu.v  consts.v  datapath.v  flopr.v  imem.v  npccontroller.v  regfile.v  top.v
pipeline/: CMakeLists.txt  consts.v  decode.v  execute.v  fetch.v  flopr.v  hazard.v  main.cc  memory.v  riscv.v
tests/: empty.cc  empty.dis  empty.out  empty.trace  fib.cc  fib.out  fib.trace  func.cc  func.dis  func.out  func.trace
